--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ env/*
 acadostesting_v02_export/c_generated_code/*
 acadostesting_v02_export/acados_ocp.json
 c_generated_code/*
-acados_ocp.json
+acados_ocp/*
 *.png
