--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ acadostesting_v02_export/c_generated_code/*
 acadostesting_v02_export/acados_ocp.json
 c_generated_code/*
 acados_ocp.json
-*.png
+*.png*.pdf
+*.pyc
