--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ acadostesting_v02_export/c_generated_code/*
 acadostesting_v02_export/acados_ocp.json
 c_generated_code/*
 acados_ocp.json
-*.png*.pdf
+*.png
+*.pdf
 *.pyc
