--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 .gitignore
 SB3/
 env/*
-acadostesting_v02_export/c_generated_code/*
-acadostesting_v02_export/acados_ocp.json
 c_generated_code/*
 acados_ocp/*
 *.png
 *.pdf
 *.pyc
 logs/play_results/report.txt
+*.json
